@@ -1,6 +1,6 @@
 ## Makefile.am for the TeX Live subdirectory texk/devnag/
 ##
-## Copyright (C) 2009-2013 Peter Breitenlohner <tex-live@tug.org>
+## Copyright 2009-2014 Peter Breitenlohner <tex-live@tug.org>
 ## You may freely use, modify and/or distribute this file.
 ##
 ACLOCAL_AMFLAGS = -I ../../m4
@@ -30,5 +30,5 @@ EXTRA_DIST += \
 	tests/misspaal.dn tests/misspaal.tex \
 	tests/vedasample.dn tests/vedasample.tex
 
-DISTCLEANFILES = captions.dn examples.dn *.tex
+DISTCLEANFILES += captions.dn examples.dn *.tex
 
